fix overlap

--- a/styles.css
+++ b/styles.css
@@ -406,7 +406,10 @@ input[type="range"]::-webkit-slider-thumb:hover {
   width: 10vmin;
 }
 
-
+#panel-3{
+  margin-top: 10%;
+  height: 100%;
+}
 
 /* Flex container for panel-2 */
 #panel-2-flex-container {
@@ -516,6 +519,7 @@ progress::-moz-progress-bar {
 section {
   height: 100vh;
   width: 100%;
+  margin-bottom: 5%;
   display: flex;
   align-items: center;
   justify-content: center;
